partially completed hesder

--- a/index.html
+++ b/index.html
@@ -33,9 +33,37 @@
             <input type="text" placeholder="Search Amazon.in" id="searchBarArea">
 
             <button id="searchButton"><i class="fa-solid fa-magnifying-glass"></i></button>
+          
         </div>
-
+    
+        <div id="india">
+            <img src="tirangalogo.png" id="tirangalogo">
+            <div id="en">EN</div>
+        </div>
+        <a href="" id="hellodev">
+            <p id="hello">Hello, Dev</p>
+            <p ><b>Account & List</b></p>
+        </a>
+        <a href="#" id="order">
+            <p > Returns</p>
+            <p>& Orders</p>
+        </a>
+        <div id="cartlogo">0            
+           <div> <i id="cartlog" class="fa-solid fa-cart-shopping"></i></div>           
+        </div>
+        <div id="cart"><b>Cart</b></div>
     </div>
-
+    <hr>
+<div id="nav_header">  
+    <a href="" id="all"><b id="threeline">&equiv;</b><b> <small>All</small></b></a>   
+    <a href="9" id="mxplayer">MX Player</a>
+    <a HREF="89" id="sell">Sell</a>
+    <a href=" " id="giftcard">Gift Card</a>
+    <a href=" " id="amazonpay">Amazon Pay</a>    
+    <a href=" " id="buyagain">Buy Again</a>
+    <a href=" " id="amazonbasic">AmazonBasics</a>
+    <a href=" " id="giftidea">Gift Ideas</a>
+    <a href=" " id="todaydeal">Today's Deal</a>
+</div>
 </body>
 </html>
